# Attest

./: .mcp.json  .pre-commit-hooks.yaml  AGENT_CONTRACT.yaml  Cargo.toml  README.md
.agents/plugins/: marketplace.json
.codex-plugin/: AGENT_CONTRACT.yaml  plugin.json
examples/: engine.AGENT_CONTRACT.yaml  inline_function.rs  root.AGENT_CONTRACT.yaml
hooks/: hooks.json
scripts/: attest-stop-hook
skills/attest/: SKILL.md
src/: AGENT_CONTRACT.yaml  lib.rs  main.rs
tests/: AGENT_CONTRACT.yaml  cli_snapshots.rs  contract_types.rs  plugin_manifest.rs  pre_commit_manifest.rs  smoke.rs
tests/snapshots/: cli_snapshots__inline_explain_cli_output_is_stable.snap  cli_snapshots__review_print_cli_output_is_stable.snap  cli_snapshots__status_cli_output_is_stable.snap
