[package]
name = "attest-contracts"
version = "0.1.0"
edition = "2024"
description = "Per-PR agent contract attestations for coding agents"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/attest-contracts"
keywords = ["agents", "attestation", "guardrails", "codex"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/.agents/plugins/marketplace.json",
    "/.codex-plugin/**",
    "/.mcp.json",
    "/AGENT_CONTRACT.yaml",
    "/Cargo.lock",
    "/Cargo.toml",
    "/README.md",
    "/examples/**",
    "/hooks/**",
    "/scripts/**",
    "/skills/**",
    "/src/**",
    "/tests/**",
]

[[bin]]
name = "attest"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
blake3 = "1.8.5"
camino = { version = "1.2.3", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
fs-err = "3.3.0"
git2 = "0.21.0"
inquire = "0.9.4"
jiff = { version = "0.2.29", features = ["serde"] }
rmcp = { version = "1.8.0", features = ["transport-io"] }
schemars = { version = "1.2.1", features = ["jiff02"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "io-std"] }
tree-sitter = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = { version = "1.44.1", features = ["filters"] }
predicates = "3.1.3"
tempfile = "3.23.0"
